--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,8 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Lora|Merriweather" rel="stylesheet">
     <script>console.log('loaded');</script>
     
     <!--
