--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Lora|Merriweather" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,900,900i&display=swap" rel="stylesheet">
     <script>console.log('loaded');</script>
     
     <!--
