--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,10 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <script src="https://kit.fontawesome.com/5c7a1af901.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <link href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Lora|Merriweather" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,600,900,300i,400i,600i,900i&display=swap" rel="stylesheet">
-    <script>console.log('loaded');</script>
     
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
