prevent font flicker

--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <!-- hide all google fonts until loaded -->
+    <style> 
+      html.wf-loading * {opacity: 0;}
+    </style>
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
