--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
 
       gtag('config', 'UA-6508237-2');
     </script>
+    <meta name="description" content="Designer/Front-end Developer based in Sydney with a passion to create functional and eye-catching user experiences.">
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- hide all google fonts until loaded -->
@@ -37,7 +38,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>React App</title>
+    <title>Corey Dunkin - Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
