added seo optimisations

--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,15 @@
 
       gtag('config', 'UA-6508237-2');
     </script>
-    <meta name="description" content="Designer/Front-end Developer based in Sydney with a passion to create functional and eye-catching user experiences.">
+
+    <meta property='og:title' content='Corey Dunkin - Web Developer'/>
+    <meta property='og:image' content='website-screen.png'/>
+    <meta property='og:description' content='Senior Web Developer with a passion for creating highly functional websites with eye catching user experiences'/>
+
+    <meta property='title' content='Corey Dunkin - Web Developer'/>
+    <meta property='image' content='website-screen.png'/>
+    <meta property='description' content='Senior Web Developer with a passion for creating highly functional websites with eye catching user experiences'/>
+
     <meta charset="utf-8" />
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <!-- hide all google fonts until loaded -->
@@ -38,7 +46,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Corey Dunkin - Developer</title>
+    <title>Corey Dunkin - Web Developer</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
